feat: reports route added
